tests/baselines/reference/enumIdentifierLiterals.errors.txt
enumIdentifierLiterals.ts(2,5): error TS2452: An enum member cannot have a numeric name.
enumIdentifierLiterals.ts(3,5): error TS2452: An enum member cannot have a numeric name.
enumIdentifierLiterals.ts(4,5): error TS2452: An enum member cannot have a numeric name.
enumIdentifierLiterals.ts(6,5): error TS2452: An enum member cannot have a numeric name.


==== enumIdentifierLiterals.ts (4 errors) ====
    enum Nums {
        1.0,
        ~~~
!!! error TS2452: An enum member cannot have a numeric name.
        11e-1,
        ~~~~~
!!! error TS2452: An enum member cannot have a numeric name.
        0.12e1,
        ~~~~~~
!!! error TS2452: An enum member cannot have a numeric name.
        "13e-1",
        0xF00D
        ~~~~~~
!!! error TS2452: An enum member cannot have a numeric name.
    }